--- a/public/index.html
+++ b/public/index.html
@@ -4,16 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PageSpeed Insights Automation</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-        }
-        #results {
-            margin-top: 20px;
-            white-space: pre-wrap;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>PageSpeed Insights Automation</h1>
@@ -22,7 +13,21 @@
         <input type="text" id="url" name="url" required>
         <button type="submit">Test</button>
     </form>
-    <div id="results"></div>
+    <div id="results">
+        <div id="performanceScore"></div>
+        <table>
+            <thead>
+                <tr>
+                    <th>FCP</th>
+                    <th>LCP</th>
+                    <th>TBT</th>
+                    <th>CLS</th>
+                </tr>
+            </thead>
+            <tbody id="metricsTableBody">
+            </tbody>
+        </table>
+    </div>
 
     <script src="script.js"></script>
 </body>
