--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <form id="urlForm">
         <label for="url">Enter URL:</label>
         <input type="text" id="url" name="url" required>
+        <label for="apiKey">Enter API Key:</label>
+        <input type="text" id="apiKey" name="apiKey" required>
         <button type="submit">Test</button>
     </form>
     <div id="results">
