--- a/index.html
+++ b/index.html
@@ -4,33 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PageSpeed Insights Automation</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>PageSpeed Insights Automation</h1>
-    <form id="urlForm">
-        <label for="url">Enter URL:</label>
-        <input type="text" id="url" name="url" required>
-        <label for="apiKey">Enter API Key:</label>
-        <input type="text" id="apiKey" name="apiKey" required>
-        <button type="submit">Test</button>
-    </form>
-    <div id="results">
-        <div id="performanceScore"></div>
-        <table>
-            <thead>
-                <tr>
-                    <th>FCP</th>
-                    <th>LCP</th>
-                    <th>TBT</th>
-                    <th>CLS</th>
-                </tr>
-            </thead>
-            <tbody id="metricsTableBody">
-            </tbody>
-        </table>
+    <div class="container">
+        <h1 class="mt-5">PageSpeed Insights Automation</h1>
+        <form id="urlForm" class="mt-3">
+            <div class="mb-3">
+                <label for="url" class="form-label">Enter URL:</label>
+                <input type="text" id="url" name="url" class="form-control" required>
+            </div>
+            <div class="mb-3">
+                <label for="apiKey" class="form-label">Enter API Key:</label>
+                <input type="text" id="apiKey" name="apiKey" class="form-control" required>
+            </div>
+            <button type="submit" class="btn btn-primary">Test</button>
+        </form>
+        <div id="results" class="mt-5">
+            <div id="performanceScore" class="h3"></div>
+            <table class="table mt-3">
+                <thead class="table-light">
+                    <tr>
+                        <th>FCP</th>
+                        <th>LCP</th>
+                        <th>TBT</th>
+                        <th>CLS</th>
+                    </tr>
+                </thead>
+                <tbody id="metricsTableBody">
+                </tbody>
+            </table>
+        </div>
     </div>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
