--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
                 <label for="apiKey" class="form-label">Enter API Key:</label>
                 <input type="text" id="apiKey" name="apiKey" class="form-control" required>
             </div>
+            <div class="mb-3">
+                <label for="strategy" class="form-label">Test Strategy:</label>
+                <select id="strategy" name="strategy" class="form-control">
+                    <option value="mobile">Mobile</option>
+                    <option value="desktop">Desktop</option>
+                </select>
+            </div>
             <button type="submit" class="btn btn-primary">Test</button>
         </form>
         <div id="results" class="mt-5">
@@ -35,9 +42,13 @@
                 <tbody id="metricsTableBody">
                 </tbody>
             </table>
+            <div id="screenshotContainer" class="mt-3">
+                <h3>Page Screenshot</h3>
+                <img id="screenshot" class="img-fluid" alt="Page Screenshot">
+            </div>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
