--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
                 </select>
             </div>
             <button type="submit" class="btn btn-primary">Test</button>
-            <div id="loadingSpinner" class="spinner-border text-primary ms-3 d-none" role="status">
-                <span class="visually-hidden">Loading...</span>
-            </div>
+            <div id="statusMessage" class="ms-3"></div>
         </form>
         <div id="results" class="mt-5">
             <div id="performanceScore" class="h3"></div>
