--- a/index.html
+++ b/index.html
@@ -27,8 +27,11 @@
                 </select>
             </div>
             <button type="submit" class="btn btn-primary">Test</button>
-            <div id="statusMessage" class="ms-3"></div>
+            <div id="loadingSpinner" class="spinner-border text-primary ms-3 d-none" role="status">
+                <span class="visually-hidden">Loading...</span>
+            </div>
         </form>
+        <div id="statusMessage" class="mt-3"></div>
         <div id="results" class="mt-5">
             <div id="performanceScore" class="h3"></div>
             <div class="row">
