--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             </div>
         </form>
         <div id="statusMessage" class="mt-3"></div>
+        <div id="countdown" class="mt-3"></div>
         <div id="results" class="mt-5">
             <div id="performanceScore" class="h3"></div>
             <div class="row">
@@ -39,6 +40,7 @@
                     <table class="table mt-3">
                         <thead class="table-light">
                             <tr>
+                                <th>Time</th>
                                 <th>FCP</th>
                                 <th>LCP</th>
                                 <th>TBT</th>
