--- a/index.html
+++ b/index.html
@@ -19,12 +19,9 @@
                 <label for="apiKey" class="form-label">Enter API Key:</label>
                 <input type="text" id="apiKey" name="apiKey" class="form-control" required>
             </div>
-            <div class="mb-3">
-                <label for="strategy" class="form-label">Test Strategy:</label>
-                <select id="strategy" name="strategy" class="form-control">
-                    <option value="mobile">Mobile</option>
-                    <option value="desktop">Desktop</option>
-                </select>
+            <div class="form-check form-switch mb-3">
+                <input class="form-check-input" type="checkbox" id="strategy" name="strategy">
+                <label class="form-check-label" for="strategy">Desktop Test</label>
             </div>
             <button type="submit" class="btn btn-primary">Test</button>
             <div id="loadingSpinner" class="spinner-border text-primary ms-3 d-none" role="status">
