--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
             <div class="form-check form-switch mb-3">
                 <input class="form-check-input" type="checkbox" id="strategy" name="strategy">
-                <label class="form-check-label" for="strategy">Desktop Test</label>
+                <label class="form-check-label" for="strategy" id="strategyLabel">Mobile Test</label>
             </div>
             <button type="submit" class="btn btn-primary">Test</button>
             <div id="loadingSpinner" class="spinner-border text-primary ms-3 d-none" role="status">
