--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
                 <input class="form-check-input" type="checkbox" id="strategy" name="strategy">
                 <label class="form-check-label" for="strategy" id="strategyLabel">Mobile Test</label>
             </div>
+            <div class="mb-3">
+                <label for="interval" class="form-label">Select Interval:</label>
+                <select id="interval" name="interval" class="form-control">
+                    <option value="1">1 minute</option>
+                    <option value="2">2 minutes</option>
+                    <option value="5">5 minutes</option>
+                    <option value="10">10 minutes</option>
+                </select>
+            </div>
             <button type="submit" class="btn btn-primary">Test</button>
             <div id="loadingSpinner" class="spinner-border text-primary ms-3 d-none" role="status">
                 <span class="visually-hidden">Loading...</span>
