Update interval selector values

--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
             <div class="mb-3">
                 <label for="interval" class="form-label">Select Interval:</label>
                 <select id="interval" name="interval" class="form-control">
-                    <option value="1">1 minute</option>
-                    <option value="2">2 minutes</option>
-                    <option value="5">5 minutes</option>
-                    <option value="10">10 minutes</option>
+                    <option value="10">10 seconds</option>
+                    <option value="30">30 seconds</option>
+                    <option value="60">1 minute</option>
+                    <option value="120">2 minutes</option>
+                    <option value="300">5 minutes</option>
                 </select>
             </div>
             <button type="submit" class="btn btn-primary">Test</button>
