Add scrolling and fixed height for the table, auto-scroll after test completion

--- a/index.html
+++ b/index.html
@@ -44,19 +44,21 @@
             <div id="performanceScore" class="h3"></div>
             <div class="row">
                 <div class="col-md-8">
-                    <table class="table mt-3">
-                        <thead class="table-light">
-                            <tr>
-                                <th>Time</th>
-                                <th>FCP</th>
-                                <th>LCP</th>
-                                <th>TBT</th>
-                                <th>CLS</th>
-                            </tr>
-                        </thead>
-                        <tbody id="metricsTableBody">
-                        </tbody>
-                    </table>
+                    <div class="table-responsive" style="max-height: 400px; overflow-y: auto;">
+                        <table class="table mt-3">
+                            <thead class="table-light">
+                                <tr>
+                                    <th>Time</th>
+                                    <th>FCP</th>
+                                    <th>LCP</th>
+                                    <th>TBT</th>
+                                    <th>CLS</th>
+                                </tr>
+                            </thead>
+                            <tbody id="metricsTableBody">
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
                 <div class="col-md-4">
                     <div id="screenshotContainer" class="mt-3 d-none">
