--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 <body>
     <div class="container">
         <h1 class="mt-5">PageSpeed Insights Automation</h1>
+        <div id="pageInfo" class="mb-3">
+            <p>Version: <span id="pageVersion"></span></p>
+            <p>Last updated at: <span id="lastUpdated"></span></p>
+        </div>
         <form id="urlForm" class="mt-3">
             <div class="mb-3">
                 <label for="url" class="form-label">Enter URL:</label>
