--- a/index.html
+++ b/index.html
@@ -11,8 +11,14 @@
     <div class="container">
         <h1 class="mt-5">PageSpeed Insights Automation</h1>
         <div id="pageInfo" class="mb-3">
-            <p>Version: <span id="pageVersion"></span></p>
-            <p>Last updated at: <span id="lastUpdated"></span></p>
+            <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                <strong>Version: <span id="pageVersion"></span></strong>
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+            <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                <strong>Last updated at: <span id="lastUpdated"></span></strong>
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
         </div>
         <form id="urlForm" class="mt-3">
             <div class="mb-3">
