--- a/index.html
+++ b/index.html
@@ -59,12 +59,13 @@
                             <thead class="table-light">
                                 <tr>
                                     <th>Time</th>
+                                    <th>Performance</th>
                                     <th>FCP</th>
                                     <th>LCP</th>
                                     <th>TBT</th>
                                     <th>CLS</th>
                                 </tr>
-                            </thead>
+                            </thead>                            
                             <tbody id="metricsTableBody">
                             </tbody>
                         </table>
