--- a/index.html
+++ b/index.html
@@ -1,85 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PageSpeed Insights Automation</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
     <div class="container">
-        <h1 class="mt-5">PageSpeed Insights Automation</h1>
-        <div id="pageInfo" class="mb-3">
-            <div class="alert alert-warning alert-dismissible fade show" role="alert">
-                <strong>Version: <span id="pageVersion"></span></strong>
-                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-            </div>
-            <div class="alert alert-warning alert-dismissible fade show" role="alert">
-                <strong>Last updated at: <span id="lastUpdated"></span></strong>
-                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-            </div>
+      <h1 class="mt-5">PageSpeed Insights Automation</h1>
+      <form id="urlForm" class="mt-3">
+        <div class="mb-3">
+          <label for="url" class="form-label">Enter URL:</label>
+          <input
+            type="text"
+            id="url"
+            name="url"
+            class="form-control"
+            required
+          />
         </div>
-        <form id="urlForm" class="mt-3">
-            <div class="mb-3">
-                <label for="url" class="form-label">Enter URL:</label>
-                <input type="text" id="url" name="url" class="form-control" required>
-            </div>
-            <div class="mb-3">
-                <label for="apiKey" class="form-label">Enter API Key:</label>
-                <input type="text" id="apiKey" name="apiKey" class="form-control" required>
-            </div>
-            <div class="form-check form-switch mb-3">
-                <input class="form-check-input" type="checkbox" id="strategy" name="strategy">
-                <label class="form-check-label" for="strategy" id="strategyLabel">Mobile Test</label>
-            </div>
-            <div class="mb-3">
-                <label for="interval" class="form-label">Select Interval:</label>
-                <select id="interval" name="interval" class="form-control">
-                    <option value="10">10 seconds</option>
-                    <option value="30">30 seconds</option>
-                    <option value="60">1 minute</option>
-                    <option value="120">2 minutes</option>
-                    <option value="300">5 minutes</option>
-                </select>
-            </div>
-            <button type="submit" class="btn btn-primary">Test</button>
-            <div id="loadingSpinner" class="spinner-border text-primary ms-3 d-none" role="status">
-                <span class="visually-hidden">Loading...</span>
-            </div>
-        </form>
-        <div id="statusMessage" class="mt-3"></div>
-        <div id="countdown" class="mt-3"></div>
-        <div id="results" class="mt-5">
-            <div class="row">
-                <div class="col-md-8">
-                    <div class="table-responsive" style="max-height: 400px; overflow-y: auto;">
-                        <table class="table mt-3">
-                            <thead class="table-light">
-                                <tr>
-                                    <th>Time</th>
-                                    <th>Performance</th>
-                                    <th>FCP</th>
-                                    <th>LCP</th>
-                                    <th>TBT</th>
-                                    <th>CLS</th>
-                                </tr>
-                            </thead>
-                            <tbody id="metricsTableBody">
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div id="screenshotContainer" class="mt-3 d-none">
-                        <h3>Page Screenshot</h3>
-                        <img id="screenshot" class="img-fluid" alt="Page Screenshot">
-                    </div>
-                </div>
-            </div>
+        <div class="mb-3">
+          <label for="apiKey" class="form-label">Enter API Key:</label>
+          <input
+            type="text"
+            id="apiKey"
+            name="apiKey"
+            class="form-control"
+            required
+          />
         </div>
+        <div class="form-check form-switch mb-3">
+          <input
+            class="form-check-input"
+            type="checkbox"
+            id="strategy"
+            name="strategy"
+          />
+          <label class="form-check-label" for="strategy" id="strategyLabel"
+            >Mobile Test</label
+          >
+        </div>
+        <div class="mb-3">
+          <label for="interval" class="form-label">Select Interval:</label>
+          <select id="interval" name="interval" class="form-control">
+            <option value="10">10 seconds</option>
+            <option value="30">30 seconds</option>
+            <option value="60">1 minute</option>
+            <option value="120">2 minutes</option>
+            <option value="300">5 minutes</option>
+          </select>
+        </div>
+        <button type="submit" class="btn btn-primary">Test</button>
+        <div
+          id="loadingSpinner"
+          class="spinner-border text-primary ms-3 d-none"
+          role="status"
+        >
+          <span class="visually-hidden">Loading...</span>
+        </div>
+      </form>
+      <div id="statusMessage" class="mt-3"></div>
+      <div id="countdown" class="mt-3"></div>
+      <div id="results" class="mt-5">
+        <div class="row">
+          <div class="col-md-8">
+            <div
+              class="table-responsive"
+              style="max-height: 400px; overflow-y: auto"
+            >
+              <table class="table mt-3">
+                <thead class="table-light">
+                  <tr>
+                    <th>Time</th>
+                    <th>Performance</th>
+                    <th>FCP</th>
+                    <th>LCP</th>
+                    <th>TBT</th>
+                    <th>CLS</th>
+                  </tr>
+                </thead>
+                <tbody id="metricsTableBody"></tbody>
+              </table>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div id="screenshotContainer" class="mt-3 d-none">
+              <h3>Page Screenshot</h3>
+              <img id="screenshot" class="img-fluid" alt="Page Screenshot" />
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
