--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
           />
         </div>
         <div class="form-check form-switch mb-3">
+          <input class="form-check-input" type="checkbox" id="modeToggle" />
+          <label class="form-check-label" for="modeToggle" id="modeLabel"
+            >Single URL</label
+          >
+        </div>
+        <div class="form-check form-switch mb-3">
           <input
             class="form-check-input"
             type="checkbox"
@@ -45,7 +51,7 @@
             >Mobile Test</label
           >
         </div>
-        <div class="mb-3">
+        <div id="intervalWrap" class="mb-3">
           <label for="interval" class="form-label">Select Interval:</label>
           <select id="interval" name="interval" class="form-control">
             <option value="10">10 seconds</option>
