Change API Key input type to password and add autocomplete attribute; enhance settings management with save/load functionality

--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@
         <div class="mb-3">
           <label for="apiKey" class="form-label">Enter API Key:</label>
           <input
-            type="text"
+            type="password"
             id="apiKey"
             name="apiKey"
             class="form-control"
             required
+            autocomplete="off"
           />
         </div>
         <div class="form-check form-switch mb-3">
